--- a/v1/static/css/style.css
+++ b/v1/static/css/style.css
@@ -2,7 +2,7 @@ ch1, h2, h3 {padding: 0; margin: 0; font-size: 14px;}
 
 @font-face {
 	font-family: united_sans_reg;
-	src: url('fonts/UnitedSansRgMd.otf');
+	src: url('../fonts/UnitedSansRgMd.otf');
 }
 
 body {
