--- a/v2/css/demo.css
+++ b/v2/css/demo.css
@@ -40,7 +40,7 @@ body {
 	font-family: 'Avenir Next', Avenir, 'Helvetica Neue', 'Lato', 'Segoe UI', Helvetica, Arial, sans-serif;
 	margin: 0;
 	color: #cecece;
-	background: #2a2b30;
+	background: #274F6A;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
