--- a/v1/static/css/style.css
+++ b/v1/static/css/style.css
@@ -1,4 +1,4 @@
-ch1, h2, h3 {padding: 0; margin: 0; font-size: 14px;}
+h1, h2, h3 {padding: 0; margin: 0; font-size: 14px;}
 
 @font-face {
 	font-family: united_sans_reg;
@@ -93,7 +93,7 @@ padding:5px; border:2px solid #ccc;
 	width: 100%;
 	height: auto;
 	padding: 20px;
-	background: #a1e131;
+	background: #244860;
 }
 
 #promo-box h1 {
