--- a/v1/static/css/style.css
+++ b/v1/static/css/style.css
@@ -94,6 +94,7 @@ padding:5px; border:2px solid #ccc;
 	height: auto;
 	padding: 20px;
 	background: #244860;
+	border-radius: 10px;
 }
 
 #promo-box h1 {
